[package]
name = "swarm"
version = "0.1.0"
authors = ["createfu <hw2102@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_derive = "1.0.104"
serde = "1.0.104"
datetime = "0.4.7"
thread_pool = {path = "D:\\rust_space\\vv"}
